--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -1,5 +1,8 @@
 pipeline {
     agent none
+    environment {
+        export PATH="/Applications/Docker.app/Contents/Resources/bin:$PATH
+    }
     stages {
         stage('Build') {
             agent {
