--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -1,7 +1,7 @@
 pipeline {
     agent none
     environment {
-        PATH="/Applications/Docker.app/Contents/Resources/bin:$PATH"
+        PATH="/Applications/Docker.app/Contents/Resources/bin:/bin:$PATH"
     }
     stages {
         stage('Build') {
